--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,28 @@
-name: Generate Datas
+name: Generate Snake
+
 on:
-  schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
-  workflow_dispatch:
+  schedule:
+    # Runs at 00:00 and 12:00 UTC every day
+    - cron: "0 */12 * * *"
+  workflow_dispatch: {}
+
+permissions:
+  contents: write   # needed to push the generated files to the output branch
+
 jobs:
   build:
-    name: Jobs to update datas
+    name: Build snake SVG
     runs-on: ubuntu-latest
     steps:
-      # Snake Animation
-      - uses: Platane/snk@master
-        id: snake-gif
-with:
+      - name: Generate snake SVG
+        uses: Platane/snk@master
+        with:
           github_user_name: mahamimran20
-          svg_out_path: dist/github-contribution-grid-snake.svg
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+
+      - name: Push snake to output branch
+        uses: crazy-max/ghaction-github-pages@v2.6.0
         with:
           target_branch: output
           build_dir: dist
