--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Generate snake SVG
         uses: Platane/snk@master
         with:
-          github_user_name: mahamirman20   # <-- Your exact GitHub username
+          github_user_name: mahamimran20   # <-- Your exact GitHub username
           outputs: dist/github-contribution-grid-snake.svg
 
       - name: Push snake to output branch
