--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Generate snake SVG
-        uses: Platane/snk@master
+        uses: Platane/snk@v3.2.0
         with:
           github_user_name: mahamimran20   # <-- Your exact GitHub username
           outputs: dist/github-contribution-grid-snake.svg
