--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,8 @@ jobs:
           github_user_name: mahamimran20
           outputs: dist/github-contribution-grid-snake.svg
           # 🎨 Color customization
-          color_snake: "#39d353"          # Snake color (GitHub green)
-          color_dots: "#161b22,#0e4429,#006d32,#26a641,#39d353" 
+          color_snake: "#4fc3f7"          # Snake color (GitHub green)
+          color_dots: "#0d1117,#0a2342,#144272,#205295,#2c74b3" 
           # order: empty, low, mid, high, max activity
 
       - name: Push snake to output branch
